Cambios Hoja de Vida
Cambios

--- a/CSSyDisenoWebResponsive/HojadeVida/css/estilos.css
+++ b/CSSyDisenoWebResponsive/HojadeVida/css/estilos.css
@@ -56,7 +56,7 @@ a[href^='http://']:visited{
   color: red;
 }
 a:hover{
-  color: blue;
+  color: green;
 }
 h2:first-child{
   text-decoration: underline;
@@ -69,5 +69,17 @@ p::first-letter{
   text-transform: capitalize;
 }
 p::first-line{
-  font-size: 32;
+  font-size: 32px;
+}
+p::selection{
+
+}
+#Estudios>ul>li:first-child>a::after{
+  content: '" - after"'
+}
+#Estudios>ul>li:last-child>a::before{
+  content: '"before - "'
+}
+#Estudios>ul>li:nth-child(2)>a::after{
+  content: '"hijo #2"'
 }
