--- a/CSSyDisenoWebResponsive/PropiedadDisplay/css/estilos.css
+++ b/CSSyDisenoWebResponsive/PropiedadDisplay/css/estilos.css
@@ -1,3 +1,12 @@
 h1{
   background-color: rgb(113, 159, 81);
+  width: 400px;
+  opacity: 0;
+}
+h2{
+  background-color: pink;
+  display: inline;
+}
+p{
+  display: inline;
 }
