--- a/CSSyDisenoWebResponsive/PropiedadesBasicas/css/estilos.css
+++ b/CSSyDisenoWebResponsive/PropiedadesBasicas/css/estilos.css
@@ -4,7 +4,14 @@ p{
   letter-spacing: 5px;
   }
 h1{
-  text-decoration: overline;
+  text-decoration: none;
   word-spacing: 20px;
   color: red;
+  text-shadow: 1px 2px 1px gray;
+}
+p::selection{
+  background: green;
+  color: black;
+  text-shadow: 1px 1px #fff;
+
 }
