--- a/CSSyDisenoWebResponsive/EjercicioMediaQuerie/css/estilos.css
+++ b/CSSyDisenoWebResponsive/EjercicioMediaQuerie/css/estilos.css
@@ -2,8 +2,10 @@ body {
 	font-family: Verdana;
 	width: 90%;
 	margin-left: 5%;
-
+	font-size: 18px;
+	color: blue;
 }
+
 
 header {
 	padding: 1vh 1vw;
@@ -28,18 +30,6 @@ footer {
 	text-align: center;
 }
 
-.adaptativa-porcentaje{
-	width:90%;
-}
-
-.adaptativa-porcentaje-1{
-	width:70%;
-}
-
-.adaptativa-porcentaje-2{
-	width:50%;
-}
-
-.adaptativa-porcentaje-3{
-	width:20%;
+img {
+	width: 50%;
 }
