--- a/CSSyDisenoWebResponsive/EjercicioMediaQuerie/css/estilos.css
+++ b/CSSyDisenoWebResponsive/EjercicioMediaQuerie/css/estilos.css
@@ -6,6 +6,28 @@ body {
 	color: blue;
 }
 
+#resumen{
+	display: none;
+}
+
+@media (min-width:600px) {
+	body{
+		font-size: 16px;
+		color: red;
+		}
+	}
+	#resumen{
+		display: block;
+	}
+}
+
+@media (min-width:900px){
+	body{
+		font-size: 14px;
+		color: black;
+		}
+	}
+}
 
 header {
 	padding: 1vh 1vw;
