--- a/CSSyDisenoWebResponsive/EjercicioPatronesdeDiseñoAdap1/css/estilos.css
+++ b/CSSyDisenoWebResponsive/EjercicioPatronesdeDiseñoAdap1/css/estilos.css
@@ -2,6 +2,36 @@ body {
 	font-family: Indie Flower;
 }
 
+.c1, .c2, .c3, .c4, .c5 {
+width: 100%;
+}
+
+@media (min-width: 600px) {
+.c2, .c3, .c4, .c5 {
+width: 50%;
+}
+}
+
+@media (min-width: 800px) {
+.c1 {
+width: 100%;
+}
+
+.c2 {
+width: 100%;
+}
+
+.c3, .c4, .c5 {
+width: 33.33%;
+}
+
+.container {
+width: 800px;
+margin-left: auto;
+margin-right: auto;
+}
+}
+
 .container {
 	margin: 0;
 	padding: 0;
@@ -45,4 +75,3 @@ body {
 	-webkit-flex-flow: row wrap;
 	flex-flow: row wrap;
 }
-
