--- a/CSSyDisenoWebResponsive/EjercicioPatronesdeDiseñoAdap2/css/estilos.css
+++ b/CSSyDisenoWebResponsive/EjercicioPatronesdeDiseñoAdap2/css/estilos.css
@@ -2,7 +2,6 @@ body {
 	font-family: Indie Flower;
 }
 
-
 .container {
 	margin: 0;
 	padding: 0;
@@ -46,3 +45,24 @@ body {
 	flex-flow: row wrap;
 }
 
+.c1, .c2, .c3, .c4, .c5 {
+	width: 100%;
+}
+
+@media (min-width: 600px) {
+	.c1 {
+		width: 25%;
+}
+
+	.c4 {
+		width: 75%;
+}
+}
+
+@media (min-width: 800px) {
+	.container {
+		width: 800px;
+		margin-left: auto;
+		margin-right: auto;
+}
+}
