--- a/FrameworksyLibreriasCSS/WidthBoxSizing/css/estilos.css
+++ b/FrameworksyLibreriasCSS/WidthBoxSizing/css/estilos.css
@@ -1,3 +1,7 @@
+*{
+  box-sizing: border-box;
+}
+
 #contenedor {
   width: 90%;
   padding: 20px;
@@ -7,6 +11,7 @@
 #cuadrado {
   width: 300px;
   height: 300px;
+  padding: 20px;
   background-color: yellow;
   border: 1px solid black;
 }
