--- a/FrameworksyLibreriasCSS/Bootstrap/EjercicioManejodeTextoseImagenes/css/estilos.css
+++ b/FrameworksyLibreriasCSS/Bootstrap/EjercicioManejodeTextoseImagenes/css/estilos.css
@@ -1,6 +1,7 @@
 /* Clase para darle estilos al body */
 .cinema-body {
   background: url(../img/fondo.jpg);
+  background-attachment: scroll;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -29,6 +30,7 @@
   background: url(../img/cartelera.jpg);
   background-repeat: no-repeat;
   background-position: center center;
+  background-attachment: scroll;
   background-size: cover;
 }
 /* Clase para darle estilos a la etiqueta contenedora del titulo de bienvenida */
@@ -75,13 +77,19 @@
   padding-left: 15px;
   padding-right: 15px;
 }
+.movies-row-last {
+  background: rgba(0, 0, 0, 0.8);
+  min-height: 425px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 /* Clase para darle estilos al titulo de peliculas*/
 .movies-title {
   color: #FFFFFF;
 }
 /* Clase para dar estilo a columna de cartelera */
 .left-column {
-  border-right: 1px dashed white;
+  border-right: 1px dashed #FFFFFF;
 }
 /* Clase para darle estilos a las imagenes de las peliculas*/
 .img-movie {
@@ -96,16 +104,38 @@
 }
 /* Clase para darle estilos a las columnas de peliculas*/
 .movies-column {
-  color: #FFFFFF;
+  margin-top: 5px;
   min-height: 330px;
-  border: 1px dashed white;
+  border: 1px dashed #FFFFFF;
 }
-.col-centered {
-  display:inline-block;
-  float:none;
-}
+
 .row-centered {
   text-align:center;
+}
+.user_data {
+  margin-top: 10px;
+  font-size: 18px;
+  color: #FFFFFF;
+}
+.label-class {
+  margin-right: 10px;
+  font-size: 13px;
+  color: #FFFFFF;
+}
+.input-element{
+  width: 100%;
+  height: 28px;
+  padding: 10px;
+  color: #FFFFFF;
+  background-color: rgba(255,255,255,0.4);
+  border-radius: 4px;
+  border: none;
+  margin-top: 5px;
+}
+.btn-save {
+  width: 40%;
+  background-color: rgba(8, 45, 94, 0.95);
+  color: #FFFFFF;
 }
 /* Media query para columnas */
 @media (max-width:770px) {
@@ -120,7 +150,7 @@
     display: none;
   }
   .movies-row {
-    min-height: 250px;
+    min-height: 400px;
     padding-left: 0px;
     padding-right: 0px;
   }
@@ -131,7 +161,7 @@
     min-height: 230px;
   }
   .jumbotron{
-    min-height: 400px;
+    min-height: 380px;
   }
   .jumbotron-img {
     width: 150px;
