--- a/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogMaterializeTurismo/css/index.css
+++ b/FrameworksyLibreriasCSS/EvaluacionFinalFrameworksCompCSS/BlogMaterializeTurismo/css/index.css
@@ -23,6 +23,8 @@ header {
 	margin-top: 2px;
 }
 
+
+/* Clase para los parrafos*/
 p {
 	text-align: justify;
 }
@@ -32,20 +34,9 @@ p {
 .input-field label {
      color: white;
 }
-/* label focus color */
-   .input-field input[type=text]:focus + label {
-     color: black;
-   }
 
-	 /* label underline focus color */
-	.input-field input[type=text]:focus {
-		border-bottom: 1px solid black;
-		box-shadow: 0 1px 0 0  black;
-	}
-	/* valid color */
-    .input-field input[type=text].valid {
-      border-bottom: 1px solid black;
-      box-shadow: 0 1px 0 0 black;
+.input-field input {
+     color: white;
 }
 
 /* Clases boton de envio*/
